--- a/modules/base/packages-core.yaml
+++ b/modules/base/packages-core.yaml
@@ -1,8 +1,8 @@
 packages:
   # Core System
   - base
-  - linux-cachyos
-  - linux-cachyos-headers
+  #- linux-cachyos
+  #- linux-cachyos-headers
   - linux-firmware
   - grub
   - sudo
