--- a/hosts/hay.yaml
+++ b/hosts/hay.yaml
@@ -9,6 +9,7 @@ enabled_modules:
   - xdg-mimes
   - scripts
   - packages
+  - pacman
   # - packages # Meta-module, usually not needed if others are enabled
 
   # --- Shell ---
