Make pacman module idempotent and warning-free

--- a/modules/pacman/module.yaml
+++ b/modules/pacman/module.yaml
@@ -1,5 +1,4 @@
 description: pacman.conf managed by dcli (Chaotic-AUR bootstrap script included)
 
-dotfiles:
-  - source: dotfiles/pacman.conf
-    target: /etc/pacman.conf
+post_install_hook: scripts/install.sh
+post_hook_behavior: always
