Add firewall, fail2ban, and hblock modules

--- a/hosts/hay.yaml
+++ b/hosts/hay.yaml
@@ -106,6 +106,9 @@ enabled_modules:
   - admin
   - logind
   - pacman
+  - firewall
+  - fail2ban
+  - hblock
   # - grub
   # - cliphist
   # - copyq
