--- a/modules/hblock/dotfiles/systemd/hblock-update.service
+++ b/modules/hblock/dotfiles/systemd/hblock-update.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=hBlock per-user HOSTALIASES updater
+Description=hBlock /etc/hosts updater
 After=network-online.target
 Wants=network-online.target
 
