--- a/modules/pacman/dotfiles/pacman.conf
+++ b/modules/pacman/dotfiles/pacman.conf
@@ -23,7 +23,7 @@ CleanMethod = KeepInstalled
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-#IgnorePkg   =
+IgnorePkg   = gnome-monitor-config-git
 #IgnoreGroup =
 
 #NoUpgrade   =
