--- a/modules/git/dotfiles/git/config
+++ b/modules/git/dotfiles/git/config
@@ -34,5 +34,5 @@
 	autoStash = true
 
 [user]
-	email = "kenanpelit@gmail.com"
-	name = "kenanpelit"
+	email = kenanpelit@gmail.com
+	name = Kenan Pelit
