Update bash profile and improve bashrc

--- a/modules/bash/module.yaml
+++ b/modules/bash/module.yaml
@@ -6,5 +6,7 @@ dotfiles:
     target: ~/.bashrc
   - source: dotfiles/.bash_profile
     target: ~/.bash_profile
+  - source: dotfiles/.profile
+    target: ~/.profile
   - source: dotfiles/bash/.bash_profile
     target: ~/.config/bash/.bash_profile
