--- a/modules/base/packages-core.yaml
+++ b/modules/base/packages-core.yaml
@@ -71,7 +71,7 @@ packages:
   - strace
   - lsof
   - lshw
-  - extra/cpulimit
+  - cpulimit-git
   - nmon
   - sysstat
   - atop
@@ -79,7 +79,7 @@ packages:
   - stress-ng
   - powertop
   - iotop
-  - extra/acct
+  - acct-svn
 
   # Wayland tooling
   - wl-clipboard
@@ -101,7 +101,7 @@ packages:
   - net-tools
   - vnstat
   - bmon
-  - extra/parallel-ssh
+  - pssh
   - iptraf-ng
   - speedtest-cli
   - iperf3
