Use default AUR packages for cpulimit and acct

--- a/modules/base/packages-core.yaml
+++ b/modules/base/packages-core.yaml
@@ -71,7 +71,7 @@ packages:
   - strace
   - lsof
   - lshw
-  - cpulimit-git
+  - cpulimit
   - nmon
   - sysstat
   - atop
@@ -79,7 +79,7 @@ packages:
   - stress-ng
   - powertop
   - iotop
-  - acct-svn
+  - acct
 
   # Wayland tooling
   - wl-clipboard
