--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -1033,16 +1033,16 @@ bind=$mainMod, mouse_down, workspace, e+1
 bind=$mainMod, mouse_up, workspace, e-1
 bind=$mainMod, mouse_left, layoutmsg, focus l
 bind=$mainMod, mouse_right, layoutmsg, focus r
-bind=ALT, 1, exec, ~/.local/bin/hypr-set here Kenp
-bind=ALT, 2, exec, ~/.local/bin/hypr-set here TmuxKenp
-bind=ALT, 3, exec, ~/.local/bin/hypr-set here Ai
-bind=ALT, 4, exec, ~/.local/bin/hypr-set here CompecTA
-bind=ALT, 5, exec, ~/.local/bin/hypr-set here WebCord
-bind=ALT, 6, exec, ~/.local/bin/hypr-set here org.telegram.desktop
-bind=ALT, 7, exec, ~/.local/bin/hypr-set here brave-youtube.com__-Default
-bind=ALT, 8, exec, ~/.local/bin/hypr-set here spotify
-bind=ALT, 9, exec, ~/.local/bin/hypr-set here ferdium
-bind=ALT, 0, exec, ~/.local/bin/hypr-set here all
+bind=ALT, 1, exec, $HOME/.local/bin/hypr-set here Kenp
+bind=ALT, 2, exec, $HOME/.local/bin/hypr-set here TmuxKenp
+bind=ALT, 3, exec, $HOME/.local/bin/hypr-set here Ai
+bind=ALT, 4, exec, $HOME/.local/bin/hypr-set here CompecTA
+bind=ALT, 5, exec, $HOME/.local/bin/hypr-set here WebCord
+bind=ALT, 6, exec, $HOME/.local/bin/hypr-set here org.telegram.desktop
+bind=ALT, 7, exec, $HOME/.local/bin/hypr-set here brave-youtube.com__-Default
+bind=ALT, 8, exec, $HOME/.local/bin/hypr-set here spotify
+bind=ALT, 9, exec, $HOME/.local/bin/hypr-set here ferdium
+bind=ALT, 0, exec, $HOME/.local/bin/hypr-set here all
 bind=$mainMod ALT, 0, exec, ~/.local/bin/hypr-set arrange-windows
 
 # -- Monitor focus + move
