Tune Hyprland animations to match Niri

--- a/modules/hyprland/dotfiles/hypr/hyprland.conf
+++ b/modules/hyprland/dotfiles/hypr/hyprland.conf
@@ -64,17 +64,19 @@ source=~/.config/hypr/dms/cursor.conf
 animations {
   bezier=linear, 0.0, 0.0, 1.0, 1.0
   bezier=quart, 0.25, 1, 0.5, 1
-  bezier=niri_workspace, 0.10, 0.82, 0.20, 1.00
-  bezier=niri_motion, 0.08, 0.85, 0.15, 1.00
+  # Curves tuned to mirror Niri's springy feel (smooth accel, soft settle)
+  bezier=niri_workspace, 0.12, 0.76, 0.20, 1.00
+  bezier=niri_motion, 0.10, 0.80, 0.20, 1.00
   bezier=easeOutExpo, 0.16, 1, 0.3, 1
   bezier=easeOutQuad, 0.25, 0.46, 0.45, 0.94
+  # Match Niri timing: open ~400ms, close ~200ms, motion ~400ms
   animation=windowsIn, 1, 4, easeOutExpo, popin 95%
   animation=windowsOut, 1, 2, easeOutQuad, popin 98%
-  animation=windowsMove, 1, 3, niri_motion
+  animation=windowsMove, 1, 4, niri_motion
   animation=fade, 1, 2, quart
   animation=workspaces, 1, 4, niri_workspace, slidevert
   animation=specialWorkspace, 1, 4, niri_workspace, slidevert
-  animation=border, 1, 3, linear
+  animation=border, 1, 2, linear
   enabled=true
 }
 
