--- a/modules/base/packages-core.yaml
+++ b/modules/base/packages-core.yaml
@@ -60,6 +60,7 @@ packages:
   - shfmt
   - podman
   - podman-compose
+  - qemu-full
 
   # Terminals / UX (moved to own modules: tmux, wezterm, kitty, starship, fastfetch, btop, bat)
   - neofetch
